V 0.1.0:
    - Extracted flask utilities from puffotter