@@ -1,2 +1,3 @@
 V 0.1.0:
     - Extracted flask utilities from puffotter
+    - Added login support for email addresses
